unpackaged/main/default/objects/nbavs__GroupAdministrator__c/nbavs__GroupAdministrator__c.object-meta.xml
<CustomObject>
    <label>Group Administrator</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Group Administrator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Administrators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>