unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__AllMembers__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AllMembers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Members</label>
    <type>Checkbox</type>
</CustomField>