unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Group__c</fullName>
    <label>Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Group Administrators</relationshipLabel>
    <relationshipName>Group_Administrators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>