unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__InsightAccess__c.field-meta.xml
<CustomField>
    <fullName>nbavs__InsightAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Insight Access</label>
    <type>Checkbox</type>
</CustomField>