unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__ListenIn__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ListenIn__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Listen In</label>
    <type>Checkbox</type>
</CustomField>