unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__LiveCallStatus__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LiveCallStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Call Status</label>
    <type>Checkbox</type>
</CustomField>