unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Name__c</fullName>
    <formula>IF(ISBLANK(nbavs__User__c), &#39;All Members&#39; ,  nbavs__User__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>