unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__RecordingAccess__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RecordingAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recording Access</label>
    <type>Checkbox</type>
</CustomField>