unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__RequireUserPin__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RequireUserPin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require User Pin</label>
    <type>Checkbox</type>
</CustomField>