unpackaged/main/default/objects/nbavs__GroupAdministrator__c/fields/nbavs__SkillEditAccess__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SkillEditAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Skill Editing</label>
    <type>Checkbox</type>
</CustomField>